src/test/ui/rfc-2005-default-binding-mode/enum.stderr
error[E0594]: cannot assign to immutable borrowed content `*x`
  --> $DIR/enum.rs:9:5
   |
LL |     *x += 1;
   |     ^^^^^^^ cannot borrow as mutable

error[E0594]: cannot assign to immutable borrowed content `*x`
  --> $DIR/enum.rs:13:9
   |
LL |         *x += 1;
   |         ^^^^^^^ cannot borrow as mutable

error[E0594]: cannot assign to immutable borrowed content `*x`
  --> $DIR/enum.rs:19:9
   |
LL |         *x += 1;
   |         ^^^^^^^ cannot borrow as mutable

error: aborting due to 3 previous errors

